Removed unnecessary margin-left from css for menubar elements. Fixed bug with menu bar text showing default color when the respective dropdown menu is visible

--- a/src/components/MenuBarIcon/menuBarIcon.module.css
+++ b/src/components/MenuBarIcon/menuBarIcon.module.css
@@ -27,7 +27,6 @@
   top: 1.25rem;
   left: 0.25rem;
   z-index: 1;
-  margin-left: auto;
   border-radius: 2px;
   flex-direction: column;
   align-items: flex-start;
