--- a/src/components/MenuBarText/menuBarText.module.css
+++ b/src/components/MenuBarText/menuBarText.module.css
@@ -9,7 +9,7 @@
   background-color: rgba(199, 199, 199, 0.1);
 }
 
-.text:hover {
+.container:hover .text {
   background-color: #1f1fff;
   color: white;
 }
@@ -57,7 +57,6 @@ hr {
   top: 1.25rem;
   left: 0;
   z-index: 1;
-  margin-left: auto;
   border-radius: 2px;
   flex-direction: column;
   align-items: flex-start;
